<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextScreen">

    <Button
        android:id="@+id/btnAlertDemo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAlertDialog"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckboxDemo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCheckboxDemo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckbox"
        app:layout_constraintBottom_toTopOf="@+id/btnRadioDemo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlertDemo" />

    <Button
        android:id="@+id/btnRadioDemo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnRadio"
        app:layout_constraintBottom_toTopOf="@+id/btnSeekbarDemo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckboxDemo" />

    <Button
        android:id="@+id/btnSeekbarDemo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSeekbar"
        app:layout_constraintBottom_toTopOf="@+id/btnToggleDemo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRadioDemo" />

    <Button
        android:id="@+id/btnToggleDemo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnToggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeekbarDemo" />
</androidx.constraintlayout.widget.ConstraintLayout>